--- a/熟悉.md
+++ b/熟悉.md
@@ -22,4 +22,11 @@ reduce()
 显示转换，和 隐式转换
 比较运算（==、!=、>、<）、if、while需要布尔值地方
 算术运算（+、-、*、/、%）
-## 面试官：== 和 ===区别，分别在什么情况使用
+## 面试官：== 和 ===区别，分别在什么情况使用 ?
+1. 优先使用 === 的场景（大多数情况）
+需要严格校验类型和值时：比如表单输入校验（用户输入的 “1” 和数字 1 可能代表不同含义）、状态判断（避免0 == ''这类意外相等）。
+避免类型转换的隐藏坑：JavaScript 的类型转换规则复杂（如 '' == 0 为true，' \t\n' == 0 也为true），使用===可减少逻辑错误。
+开发工具 / 框架推荐：ESLint 等工具默认推荐===，多数团队规范也要求优先使用，提升代码可读性和严谨性。
+2. 适合使用 == 的场景（少数明确需求）
+
+## 面试官：深拷贝浅拷贝的区别？如何实现一个深拷贝？
